--- a/app/src/main/res/layout/activity_clientes.xml
+++ b/app/src/main/res/layout/activity_clientes.xml
@@ -43,12 +43,46 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.022" />
 
+    <TextView
+        android:id="@+id/textViewNome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:text="Nome"
+        app:layout_constraintBottom_toTopOf="@+id/scrollview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/textViewCodigo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="88dp"
+        android:text="Código"
+        app:layout_constraintBottom_toTopOf="@+id/scrollview"
+        app:layout_constraintStart_toEndOf="@+id/textViewNome"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/textViewOrcamento"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Orçamento"
+        app:layout_constraintBottom_toTopOf="@+id/scrollview"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textViewCodigo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
     <ScrollView
         android:id="@+id/scrollview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/textViewClientes">
-
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewClientes"
+        tools:layout_editor_absoluteX="0dp">
 
         <TableLayout
             android:id="@+id/tableLayout"
@@ -93,5 +127,4 @@
             </TableRow>
         </TableLayout>
     </ScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
