ajustes visuais activity main e clientes

--- a/app/src/main/res/layout/activity_clientes.xml
+++ b/app/src/main/res/layout/activity_clientes.xml
@@ -59,6 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:text="Nome"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/scrollview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -70,6 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="84dp"
         android:text="Código"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/scrollview"
         app:layout_constraintStart_toEndOf="@+id/textViewNome"
         app:layout_constraintTop_toTopOf="parent"
@@ -80,9 +82,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Orçamento"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/scrollview"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.433"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toEndOf="@+id/textViewCodigo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
@@ -115,8 +118,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="Nome"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -124,8 +126,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="Código"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -133,8 +134,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="Orçamento"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textSize="16sp" />
             </TableRow>
         </TableLayout>
     </ScrollView>
