--- a/app/src/main/res/layout/activity_cadastrar_os.xml
+++ b/app/src/main/res/layout/activity_cadastrar_os.xml
@@ -160,7 +160,7 @@
         android:id="@+id/textViewValorTotal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Total"
+        android:text="total"
         android:layout_marginLeft="10dp"/>
 
     <TextView
@@ -177,7 +177,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="insira um comentário"
-        android:inputType="numberDecimal"
         android:minHeight="96dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"/>
