Ajuste de botões

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,16 +55,20 @@
         app:layout_constraintTop_toBottomOf="@+id/username"
         android:autofillHints="" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="64dp"
-        android:background="@color/teal_200"
+        android:background="@drawable/background_button"
+        android:layout_margin="40dp"
+        android:padding="15dp"
+        android:clickable="false"
         android:enabled="true"
         android:text="@string/logar"
+        android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
