--- a/app/src/main/res/layout/activity_cadastrar.xml
+++ b/app/src/main/res/layout/activity_cadastrar.xml
@@ -66,11 +66,14 @@
 
     <Button
         android:id="@+id/cadastrar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="45dp"
         android:layout_gravity="start"
+        android:layout_margin="20dp"
         android:layout_marginBottom="64dp"
+        android:background="@drawable/background_button"
         android:enabled="true"
+        android:padding="15dp"
         android:text="@string/Cadastrar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
