--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,14 +22,14 @@
         android:layout_height="200dp"
         android:layout_marginTop="40dp"
         android:src="@mipmap/ic_goodtimes"
-        app:layout_constraintBottom_toTopOf="@+id/GoodTimes"
+        app:layout_constraintBottom_toTopOf="@+id/txtGoodTimes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/GoodTimes"
+        android:id="@+id/txtGoodTimes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="80dp"
