--- a/app/src/main/res/layout/activity_comentario.xml
+++ b/app/src/main/res/layout/activity_comentario.xml
@@ -17,6 +17,19 @@
         tools:context=".comentarioActivity">
 
         <TextView
+            android:id="@+id/btnVoltar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="voltar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.045"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.022" />
+
+
+        <TextView
             android:id="@+id/textViewComentario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -28,11 +41,10 @@
         <EditText
             android:id="@+id/editTextComentario"
             android:layout_width="match_parent"
-            android:layout_height="430dp"
+            android:layout_height="100dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:hint="insira um comentário"
-            android:minHeight="96dp" />
+            android:hint="insira um comentário" />
 
 
         <Button
