--- a/app/src/main/res/layout/activity_comentar.xml
+++ b/app/src/main/res/layout/activity_comentar.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ComentarioActivity">
+    tools:context=".ComentarActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,6 +27,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.022" />
+
+        <TextView
+            android:id="@+id/textViewAssunto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Assunto"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:textStyle="bold"/>
+
+        <EditText
+            android:id="@+id/editTextAssunto"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:hint="insira o assunto" />
 
         <TextView
             android:id="@+id/textViewComentario"
