--- a/app/src/main/res/layout/activity_comentarios.xml
+++ b/app/src/main/res/layout/activity_comentarios.xml
@@ -7,14 +7,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ComentarioActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"    >
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".comentarioActivity">
+        tools:context=".ComentariosActivity">
 
         <TextView
             android:id="@+id/btnVoltar"
@@ -27,6 +27,41 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.022" />
+
+        <Button
+            android:id="@+id/btnCadastrarComentario"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cadastrar comentario"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textViewServico"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Serviço"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="10dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/textViewServicoDesc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Serviço"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:textStyle="bold"/>
 
         <ScrollView
             android:id="@+id/scrollview"
@@ -41,7 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginRight="10dp"
                 android:stretchColumns="*">
 
@@ -55,7 +90,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="Nome"
+                        android:text="Assunto"
                         android:textSize="16sp" />
 
                     <TextView
@@ -70,5 +105,6 @@
             </TableLayout>
         </ScrollView>
 
-    </LinearLayout>
+     </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
