--- a/app/src/main/res/layout/activity_comentarios.xml
+++ b/app/src/main/res/layout/activity_comentarios.xml
@@ -39,15 +39,27 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
 
+        <Button
+            android:id="@+id/btnEncerrar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Encerrar Ordem"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnCadastrarComentario"
+            app:layout_constraintVertical_bias="0.063" />
+
         <TextView
             android:id="@+id/textViewId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:text="Id do serviço"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/btnVoltar" />
+            app:layout_constraintTop_toBottomOf="@+id/btnEncerrar"
+            tools:layout_editor_absoluteX="0dp" />
 
         <TextView
             android:id="@+id/textViewIdDesc"
